wwr/styles/rafting.css
:root {
    --accent-color: #D16200;
    --background-color: #6fd0d3;
    --font-color: #3A3017;
    --font-family: 'Montserrat', sans-serif;
    --heading-font-family: 'Afacad Flux', sans-serif;
}

body {
    font-family: var(--font-family);
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 1rem;
}

header {
    display: grid;
    grid-template-columns: 1fr 2fr;
    align-items: center;
    background-color: var(--background-color);
    color: var(--font-color);
    padding: 1%;
    margin: 1%;
    border-radius: 10px;
}

.logo-img {
    width: auto;
    height: auto;
    justify-self: center;
    grid-column: 1;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--background-color);
    color: var(--font-color);
    text-align: center;
    font-size: 125%;
    grid-column: 2 / 3;
}

nav a {
    text-decoration: none;
    background-color: var(--background-color);
    color: var(--font-color);
}

.hero-container {
    position: relative;
    display: grid;
    grid-template-columns: 1fr;
    align-items: center;
    justify-items: center;
    background-color: white;
    color: var(--font-color);
    padding: 1%;
    margin: 1%;
    border-radius: 10px;
}

h1 {
    font-family: var(--heading-font-family);
    font-size: 2rem;
    text-align: center;
    background-color: white;
    color: var(--font-color);
    grid-row: 1;
}

.hero-container img {
    width: 100%;
    height: auto;
    grid-row: 2;
    border-radius: 5px;
}

.translucent-box {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: grid;
    grid-template-columns: 3fr 1fr;
    background-color: rgba(0, 0, 0, 0.5);
    padding: 20px;
    border-radius: 10px;
    color: white;
    width: 80%;
    max-width: 800px;
}

.translucent-box p {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    padding-right: 10px;
}

.translucent-box .box-image {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    padding-left: 10px;
}

.translucent-box img {
    max-width: 15rem;
    height: auto;
    border-radius: 5px;
}

h2 {
    font-family: var(--heading-font-family);
    font-size: 2rem;
    background-color: white;
    color: var(--font-color);
    text-align: center;
    margin: 1%;
}

.history-container {
    display: flex;
    background-color: var(--background-color);
    color: var(--font-color);
    border-radius: 10px;
    gap: 1rem;
    margin: 1%;
}

.history-container p {
    padding: 1rem;
}

.history-container img {
    width: 50%;
    height: auto;
    border-radius: 10px;
    margin: 1%
}

h3 {
    font-family: var(--heading-font-family);
    font-size: 1.5rem;
    background-color: white;
    color: var(--font-color);
    text-align: center;
    margin: 1%;
}

.adventures {
    display: grid;
    background-color: var(--accent-color);
    color: var(--font-color);
    grid-template-columns: repeat(5, 1fr);
    margin: 1%;
    border-radius: 10px;
}

figure img {
    width: 100%;
    height: auto;
    border-radius: 5px;
    margin: 1%;
}

.adventures figcaption {
    color: var(--font-color);
    background-color: var(--accent-color);
    text-align: center;
    font-size: 1rem;
    font-weight: bold;
    margin: 2%;
    grid-row: 2;
}

.company_info {
    display: grid;
    color: var(--font-color);
    background-color: var(--background-color);
    grid-template-columns: 1fr;
    margin: 1%;
    border-radius: 10px;
    align-items: flex-end;
}

.company_info p {
    color: var(--font-color);
    background-color: var(--background-color);
    text-align: center;
    font-size: 1rem;
    font-weight: bold;
    margin: 2%;
    grid-column: 1;
}

.map-iframe {
    width: 100%;
    height: 25rem;
    padding-bottom: 1%;
    border: 0;
    border-radius: 10px;
    grid-column: 1;
}

.employees {
    display: grid;
    background-color: var(--accent-color);
    color: var(--font-color);
    grid-template-columns: repeat(3, 1fr);
    margin: 1%;
    border-radius: 10px;
}

.employees img {
    width: 10rem;
    height: auto;
    border-radius: 5px;
    display: block; 
    margin-left: auto;
    margin-right: auto;
}

.employees figcaption {
    color: var(--font-color);
    background-color: var(--accent-color);
    text-align: center;
    font-size: 1rem;
    font-weight: bold;
    margin: 2%;
    grid-row: 2;
}

footer {
    display: grid;
    grid-template-columns: 5fr 1fr 1fr 1fr;
    color: var(--font-color);
    background-color: var(--background-color);
    padding: 1%;
    margin: 1%;
    border-radius: 10px;
}

footer img {
    align-content: center;
    width: 25px;
    height: auto;
    padding: 5px;
}

form {
    width: 650px;
    margin: 0 auto;
    padding: 1.5rem;
    border: 5px;
    border-radius: 10px;
    background-color: #fff;
    color: var(--font-color);
    display: grid;
}

legend {
    font-size: 1.2rem;
    font-weight: bold;
    color: var(--font-color);
    background-color: white;
    margin-bottom: 10px;
}

label {
    padding-right: 1rem;
}

input, select, textarea {
    padding: 1rem;
    margin-right: 1.5rem;
    font-size: 1rem;
}

input[type="checkbox"] {
    width: 1.25rem;
    height: 1.25rem;
    vertical-align: bottom;
}

button {
    padding: 1rem 2rem;
    background-color: var(--accent-color);
    color: #fff;
    border: none;
    border-radius: 5px;
}

button:hover {
    background-color: #b85e10;
    color: var(--font-color)
}

.form-item {
    display: grid;
    align-items: center;
}

.column1 {
    grid-template-columns: 1fr;
    margin: 10px 0;
}

.column2 {
    grid-template-columns: 1fr 2fr;
    margin: 10px 0;
}

